--- a/index.html
+++ b/index.html
@@ -560,6 +560,63 @@
             justify-content: center;
         }
 
+        .macbook-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .macbook {
+            width: min(900px, 100%);
+            transform-style: preserve-3d;
+        }
+
+        .macbook-screen {
+            background: linear-gradient(160deg, #1b1b24 0%, #0d0d14 100%);
+            border-radius: 22px 22px 16px 16px;
+            padding: 24px;
+            border: 2px solid rgba(255, 255, 255, 0.08);
+            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.45);
+        }
+
+        .screen-content .countdown-card {
+            background: transparent;
+            border: none;
+            box-shadow: none;
+            padding: 0;
+            max-width: none;
+        }
+
+        .macbook-base {
+            position: relative;
+            height: 28px;
+            background: linear-gradient(90deg, #2b2b35 0%, #17171f 100%);
+            border-radius: 0 0 20px 20px;
+            margin: 0 40px;
+            box-shadow: inset 0 6px 10px rgba(255, 255, 255, 0.05);
+        }
+
+        .macbook-notch {
+            position: absolute;
+            top: 6px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 120px;
+            height: 8px;
+            background: rgba(255, 255, 255, 0.08);
+            border-radius: 999px;
+        }
+
+        @media (max-width: 768px) {
+            .macbook {
+                width: 100%;
+            }
+
+            .macbook-base {
+                margin: 0 16px;
+            }
+        }
+
         .cards-section {
             position: relative;
             padding: 100px 50px;
@@ -1142,32 +1199,43 @@
 
         <section class="countdown-section" id="countdown">
             <div class="countdown-container">
-                <div class="countdown-card">
-                    <div class="countdown-header">
-                        <span class="badge" data-i18n="countdown.badge">Event Countdown</span>
-                        <h2 class="countdown-title" data-i18n="countdown.title">Days left before DublinHacks 2026</h2>
-                        <p class="section-subtitle" data-i18n="countdown.subtitle">Mark your calendar and start building your team.</p>
-                    </div>
-                    <div class="countdown" id="countdown" aria-live="polite">
-                        <div class="countdown-item">
-                            <div class="countdown-value" id="days">00</div>
-                            <div class="countdown-label" data-i18n="countdown.days">Days</div>
+                <div class="macbook-container" id="macbookContainer" style="transform: scale(1) rotateX(0deg) translateY(0px); opacity: 1;">
+                    <div class="macbook">
+                        <div class="macbook-screen">
+                            <div class="screen-content">
+                                <div class="countdown-card">
+                                    <div class="countdown-header">
+                                        <span class="badge" data-i18n="countdown.badge">Event Countdown</span>
+                                        <h2 class="countdown-title" data-i18n="countdown.title">Days left before DublinHacks 2026</h2>
+                                        <p class="section-subtitle" data-i18n="countdown.subtitle">Mark your calendar and start building your team.</p>
+                                    </div>
+                                    <div class="countdown" aria-live="polite">
+                                        <div class="countdown-item">
+                                            <div class="countdown-value" id="days">00</div>
+                                            <div class="countdown-label" data-i18n="countdown.days">Days</div>
+                                        </div>
+                                        <div class="countdown-item">
+                                            <div class="countdown-value" id="hours">00</div>
+                                            <div class="countdown-label" data-i18n="countdown.hours">Hours</div>
+                                        </div>
+                                        <div class="countdown-item">
+                                            <div class="countdown-value" id="minutes">00</div>
+                                            <div class="countdown-label" data-i18n="countdown.minutes">Minutes</div>
+                                        </div>
+                                        <div class="countdown-item">
+                                            <div class="countdown-value" id="seconds">00</div>
+                                            <div class="countdown-label" data-i18n="countdown.seconds">Seconds</div>
+                                        </div>
+                                    </div>
+                                    <div class="countdown-footer">
+                                        <span class="pill" data-i18n="countdown.footer">Doors open at 9:00 AM · Dublin, CA</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="countdown-item">
-                            <div class="countdown-value" id="hours">00</div>
-                            <div class="countdown-label" data-i18n="countdown.hours">Hours</div>
+                        <div class="macbook-base">
+                            <div class="macbook-notch"></div>
                         </div>
-                        <div class="countdown-item">
-                            <div class="countdown-value" id="minutes">00</div>
-                            <div class="countdown-label" data-i18n="countdown.minutes">Minutes</div>
-                        </div>
-                        <div class="countdown-item">
-                            <div class="countdown-value" id="seconds">00</div>
-                            <div class="countdown-label" data-i18n="countdown.seconds">Seconds</div>
-                        </div>
-                    </div>
-                    <div class="countdown-footer">
-                        <span class="pill" data-i18n="countdown.footer">Doors open at 9:00 AM · Dublin, CA</span>
                     </div>
                 </div>
             </div>
